Fix star spacing
The star was converted to a button.
Need to reset buttons margin and padding
This impacted the question list buttons.  These now use the default button mixin
Re-enabled the star animation

--- a/assets/scss/modules/_answer_list.scss
+++ b/assets/scss/modules/_answer_list.scss
@@ -21,7 +21,7 @@
   line-height: 1.2em;
 }
 .answer-reply {
-  @extend %list-item-reply-button;
+  @include default-button;
 }
 
 .answer-new {
