--- a/assets/scss/root/_buttons.scss
+++ b/assets/scss/root/_buttons.scss
@@ -47,8 +47,9 @@
     }
   }
 }
-.button {
-
+button {
+  margin: 0;
+  padding: 0;
 }
 
 .button {
